# BioResearch-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  SKILL.md  pyproject.toml  requirements.txt
agent_langgraph_prototype/: README.md  __init__.py  orchestrator.py  run_demo.py  run_full_validation.py  runtime_config.py
agent_langgraph_prototype/adapters/: archive_adapter.py  execution_adapter.py  flow_adapter.py  paper_adapter.py  project_context_adapter.py  tool_registry_adapter.py
agent_langgraph_prototype/agents/: base.py  execution_agent.py  planner_agent.py  research_agent.py  roles.py  workspace_agent.py
agent_langgraph_prototype/contracts/: agent_contracts.py  graph_state.py  skill_contracts.py
agent_langgraph_prototype/docs/: framework_first_partition.md  full_architecture_partition.md  full_function_ordered_map.md  llm_skill_tool_mapping.md  migration_notes.md  original_vs_added_map.md  skill_tool_mapping.md
agent_langgraph_prototype/framework/: README.md
agent_langgraph_prototype/graph/: topology.py
agent_langgraph_prototype/guardrails/: execution_guardrail.py  (+2 more)
bioresearch_agent/: __init__.py  benchmark.py  cli.py  data_workflow.py  end_to_end_workflow.py  external_skills.py  live_sources.py  planner.py  privacy.py  reference_workflow.py  retrieval.py  schemas.py  skill_workflows.py  skills.py  tools.py  workflow_contracts.py  workflow_runtime.py
docs/: end_to_end_workflow.md  one_sentence_summary.md  privacy_sanitization.md  skill_pack_integration.md  skills_tools_extension.md  vibe_coding.md
tests/: test_agent.py
(+33 files in other folders)
